--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-APP_NAME=Laravel
+APP_NAME=SIGEMUNA
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:F2eC7+6TLPfZcDhuXNsVAvkFBsShbW+zeiL3p4BTSpw=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=Africa/Maputo
+
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -12,13 +13,13 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=public
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -58,3 +59,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+WEB_HOST=
+SMS_HOST=http://172.20.1.30:8080#https://key-correctly-cobra.ngrok-free.app
