--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=SIGEMUNA
 APP_ENV=local
-APP_KEY=base64:F2eC7+6TLPfZcDhuXNsVAvkFBsShbW+zeiL3p4BTSpw=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=Africa/Maputo
@@ -20,7 +20,7 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=public
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
