--- a/.env.example
+++ b/.env.example
@@ -61,4 +61,8 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 WEB_HOST=
-SMS_HOST=http://172.20.1.30:8080#https://key-correctly-cobra.ngrok-free.app
+SMS_HOST=
+
+#SMS GATEWAY
+SMS_USER=
+SMS_PASS=
